Update main min-height to avoid scroll on small-content pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -390,7 +390,7 @@ body,
 }
 
 main {
-  min-height: calc(100vh - 510px);
+  min-height: calc(100vh - 524px);
   padding-bottom: 1rem;
 }
 
